--- a/admin_optica/src/app/optica/roles/add-role-user/add-role-user.component.html
+++ b/admin_optica/src/app/optica/roles/add-role-user/add-role-user.component.html
@@ -21,9 +21,25 @@
                         <div class="form-group row">
                             <label class="col-form-label col-md-2">Nombre</label>
                             <div class="col-md-10">
-                                <input type="text" [(ngModel)]="name" class="form-control" name="name">
+                                <input type="text" name="name" [(ngModel)]="name" class="form-control">
                             </div>
                         </div>
+                        <div class="form-group row">
+                            <div class="col-md-12 text-end">
+                                <button class="btn btn-primary" (click)="save()"> GUARDAR</button>
+                            </div>
+                        </div>
+                        <div class="form-group row" *ngIf="valid_form">
+                            <div class="col-md-12">
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    <strong>OJO!! </strong> ES NECESARIO QUE DEFINA UN NOMBRE Y SELECCIONE UN PERMISO.
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true"> </span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        
                     </form>
                 </div>
             </div>
@@ -45,10 +61,12 @@
                                             <td>{{side.menuValue}}</td>
                                             <td>
                                                 <div class="" *ngIf="side.subMenus && side.subMenus.length > 0">
-                                                    <ng-container *ngFor="let subMenus of side.subMenus" >
+                                                    <ng-container *ngFor="let subMenus of side.subMenus">
                                                         <div class="checkbox">
                                                             <label>
-                                                                <input type="checkbox" name="checkbox" (click)="addPermission(subMenus)"> {{ subMenus.menuValue }} 
+                                                                <input type="checkbox" name="checkbox"
+                                                                    (click)="addPermission(subMenus)"> {{
+                                                                subMenus.menuValue }}
                                                             </label>
                                                         </div>
                                                     </ng-container>
@@ -56,7 +74,8 @@
                                                 <div class="" *ngIf="side.subMenus && side.subMenus.length == 0">
                                                     <div class="checkbox">
                                                         <label>
-                                                            <input type="checkbox" name="checkbox" (click)="addPermission(side)">  {{ side.menuValue }}
+                                                            <input type="checkbox" name="checkbox"
+                                                                (click)="addPermission(side)"> {{ side.menuValue }}
                                                         </label>
                                                     </div>
 
